--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -33,20 +33,26 @@ jobs:
       - name: Set package name and version
         id: set_name
         run: |
-          # Initialize the version variables
-          FOLDER_NAME="nexus-git-development"
+          echo "Checking GITHUB_REF: $GITHUB_REF"
           
-          if [[ "${{ github.ref }}" == "refs/tags/*" ]]; then
-            # Extract the tag name from github.ref (e.g., refs/tags/1.0.6)
-            TAG_NAME="${GITHUB_REF#refs/tags/}"  # Remove the 'refs/tags/' prefix to get the tag name
+          # Initialize variables
+          FOLDER_NAME="nexus-git-development"
+      
+          # Check if this is a tag push
+          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+            # Extract the tag name
+            TAG_NAME="${GITHUB_REF#refs/tags/}"
             echo "Tag name extracted: ${TAG_NAME}"
+            
+            # Set the package id and version
             PACKAGE_ID="nexus-git-${TAG_NAME}"
             PACKAGE_VERSION="${TAG_NAME}"  # Use the tag as version (e.g., 1.0.6)
+            
           else
-            # Fallback for other branches like development and release
+            # Fallback for branches
             if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
               PACKAGE_ID="${FOLDER_NAME}.nexus-git"
-              PACKAGE_VERSION="1.0.0-${{ github.run_id }}" 
+              PACKAGE_VERSION="1.0.0-${{ github.run_id }}"
             elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
               COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6)
               PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
@@ -57,11 +63,16 @@ jobs:
             fi
           fi
       
-          # Output the version for debugging
+          # Output the package name and version for debugging
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
           echo "::set-output name=package_id::${PACKAGE_ID}"
           echo "::set-output name=package_version::${PACKAGE_VERSION}"
+      
+          # Debugging output to verify the values
+          echo "PACKAGE_ID: $PACKAGE_ID"
+          echo "PACKAGE_VERSION: $PACKAGE_VERSION"
+      
        
 
       - name: Pack project
@@ -72,6 +83,7 @@ jobs:
               /p:PackageVersion=${{ steps.set_name.outputs.package_version }}
             # List files in the output directory for debugging
             ls -al ./bin/Release
+        
         
 
       - name: Upload Package as Artifact
