--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     tags:
-      - '*'  # Trigger on any tag push
+      - '*'  
 
 jobs:
   build:
@@ -35,21 +35,21 @@ jobs:
         run: |
           echo "Checking GITHUB_REF: $GITHUB_REF"
           
-          # Initialize variables
+          
           FOLDER_NAME="nexus-git-development"
       
-          # Check if this is a tag push
+          
           if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-            # Extract the tag name
+            
             TAG_NAME="${GITHUB_REF#refs/tags/}"
             echo "Tag name extracted: ${TAG_NAME}"
             
-            # Set the package id and version
+            
             PACKAGE_ID="nexus-git-${TAG_NAME}"
-            PACKAGE_VERSION="${TAG_NAME}"  # Use the tag as version (e.g., 1.0.6)
+            PACKAGE_VERSION="${TAG_NAME}"  
             
           else
-            # Fallback for branches
+            
             if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
               PACKAGE_ID="${FOLDER_NAME}.nexus-git"
               PACKAGE_VERSION="1.0.0-${{ github.run_id }}"
@@ -63,13 +63,13 @@ jobs:
             fi
           fi
         
-          # Output the package name and version for debugging
+         
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
           echo "::set-output name=package_id::${PACKAGE_ID}"
           echo "::set-output name=package_version::${PACKAGE_VERSION}"
       
-          # Debugging output to verify the values
+          
           echo "PACKAGE_ID: $PACKAGE_ID"
           echo "PACKAGE_VERSION: $PACKAGE_VERSION"
       
@@ -81,7 +81,7 @@ jobs:
             dotnet pack --configuration Release --output ./bin/Release \
               /p:CustomPackageId=${{ steps.set_name.outputs.package_id }} \
               /p:PackageVersion=${{ steps.set_name.outputs.package_version }}
-            # List files in the output directory for debugging
+            
             ls -al ./bin/Release
         
         
