--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Build Project
+name: Build and Versioning
 
 on:
   workflow_call:
@@ -10,51 +10,37 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v2
-        with:
-          dotnet-version: '8.0.x'
-
-      - name: Restore dependencies
-        run: dotnet restore
-
-      - name: Build project
-        run: dotnet build --configuration Release
 
       - name: Set package name and version
         id: set_name
         run: |
           echo "Checking GITHUB_REF: $GITHUB_REF"
-          
-          FOLDER_NAME="nexus-git-development"
-      
-          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+
+          # Extract versioning info based on branch/tag
+          if [[ "${{ inputs.branch }}" == refs/tags/* ]]; then
             TAG_NAME="${GITHUB_REF#refs/tags/}"
-            echo "Tag name extracted: ${TAG_NAME}"
             PACKAGE_ID="nexus-git-${TAG_NAME}"
             PACKAGE_VERSION="${TAG_NAME}"
           else
-            if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
-              PACKAGE_ID="${FOLDER_NAME}.nexus-git"
+            if [[ "${{ inputs.branch }}" == "refs/heads/development" ]]; then
+              PACKAGE_ID="nexus-git-development"
               PACKAGE_VERSION="1.0.0-${{ github.run_id }}"
-            elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
-              COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6)
-              PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
-              PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
-            elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
-              PACKAGE_ID="nexus-git-1.0.1"
+            elif [[ "${{ inputs.branch }}" == "refs/heads/release" ]]; then
+              PACKAGE_ID="nexus-git-release"
+              PACKAGE_VERSION="1.0.0-${{ github.sha }}"
+            else
+              PACKAGE_ID="nexus-git-master"
               PACKAGE_VERSION="1.0.1"
             fi
           fi
-        
+
+          # Set outputs for use in the main workflow
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
+          
           echo "::set-output name=package_id::${PACKAGE_ID}"
           echo "::set-output name=package_version::${PACKAGE_VERSION}"
-        
-          echo "PACKAGE_ID: $PACKAGE_ID"
-          echo "PACKAGE_VERSION: $PACKAGE_VERSION"
