--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -48,8 +48,7 @@ jobs:
               PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
               PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
             elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
-              PACKAGE_ID="nexus-git-1.0.1"
-              PACKAGE_VERSION="1.0.1"
+              echo "Please provide a tag with the master branch, can't proceed further"
             fi
           fi
           
