--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -89,7 +89,7 @@ jobs:
 
   push_to_nexus:
     runs-on: ubuntu-latest
-    needs: sonar_scan
+    needs: build
     environment: nexus-approval
 
     steps:
