--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -3,14 +3,13 @@ name: Publish Package
 on:
   push:
     branches:
-      
       - development
       - release
     tags:
-        - '*'
+      - '*'
      
 
-jobs:
+jobs: 
   build:
     runs-on: ubuntu-latest
 
@@ -22,7 +21,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2 
 
-      - name: Build Project
+      - name: Build Project 
         uses: ./.github/actions/build  
 
       - name: Set package name and version
@@ -32,6 +31,7 @@ jobs:
           FOLDER_NAME="nexus-git-development"
           PACKAGE_ID=""
           PACKAGE_VERSION=""
+
           if [[ "${{ github.ref }}" == refs/tags/* ]]; then
             
             if [[ "${{ github.event.before }}" == "${{ github.sha }}" && "${{ github.ref }}" == refs/tags/* ]]; then
@@ -53,8 +53,8 @@ jobs:
               echo "Please provide a tag with the master branch, can't proceed further"
             fi
           fi
-          
-         
+           
+        
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
           echo "::set-output name=package_id::${PACKAGE_ID}"
@@ -75,6 +75,17 @@ jobs:
         with:
           name: nuget-package
           path: ./bin/Release/${{ steps.set_name.outputs.package_id }}.${{ steps.set_name.outputs.package_version }}.nupkg
+  sonar_scan:
+    runs-on: windows-latest
+    needs: build  
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2 
+      - name: SonarQube Scan
+        uses: ./.github/actions/sonar-scan
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}  
+          sonar_token: ${{ secrets.SONAR_TOKEN }} 
 
   push_to_nexus:
     runs-on: ubuntu-latest
