--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -32,8 +32,8 @@ jobs:
           PACKAGE_VERSION=""
 
           if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-             
-            if [[ "${{ github.event.before }}" == "${{ github.sha }}" && "${{ github.ref }}" == refs/tags/* ]]; then
+            
+            if [["${{ github.ref }}" == refs/tags/*  && "${{ github.base_ref }}" == "master"]]; then
               TAG_NAME="${GITHUB_REF#refs/tags/}"
               PACKAGE_ID="nexus-git-${TAG_NAME}"
               PACKAGE_VERSION="${TAG_NAME}"
