--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -29,33 +29,29 @@ jobs:
           echo "Checking GITHUB_REF: $GITHUB_REF"
           FOLDER_NAME="nexus-git-development"
           PACKAGE_ID=""
-          PACKAGE_VERSION=""
-
+          PACKAGE_VERSION=""      
           if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-            TAG_NAME="${GITHUB_REF#refs/tags/}"
-            
-          
-            if [[ "${{ github.base_ref }}" == "master" ]]; then
+            if [[ "${{ github.event.before }}" == "${{ github.sha }}" && "${{ github.ref }}" == refs/tags/* ]]; then
+              TAG_NAME="${GITHUB_REF#refs/tags/}"
               PACKAGE_ID="nexus-git-${TAG_NAME}"
               PACKAGE_VERSION="${TAG_NAME}"
             else
-              echo "Error: Tags can only be pushed from the master branch."
-              exit 1
-            fi 
+              echo "Tag is not pushed from the master branch. Skipping version assignment."
+            fi
           else
             if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
               PACKAGE_ID="${FOLDER_NAME}.nexus-git"
               PACKAGE_VERSION="1.0.0-${{ github.run_id }}"
-            elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then 
-              COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6) 
-              PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"  
+            elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
+              COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6)
+              PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
               PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
             elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
-              echo "Please provide a tag with the master branch, can't proceed further"
+              PACKAGE_ID="nexus-git-1.0.1"
+              PACKAGE_VERSION="1.0.1"
             fi
           fi
-           
-         
+          
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
           echo "::set-output name=package_id::${PACKAGE_ID}"
