--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2 
+        uses: actions/checkout@v2  
 
       - name: Build Project 
         uses: ./.github/actions/build  
@@ -29,43 +29,49 @@ jobs:
           echo "Checking GITHUB_REF: $GITHUB_REF"
           FOLDER_NAME="nexus-git-development"
           PACKAGE_ID=""
-          PACKAGE_VERSION=""      
-          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-            if [[ "${{ github.event.before }}" == "${{ github.sha }}" && "${{ github.ref }}" == refs/tags/* ]]; then
-              TAG_NAME="${GITHUB_REF#refs/tags/}"
+          PACKAGE_VERSION=""
+
+          if [[ "$GITHUB_REF" == refs/tags/* ]]; then
+            TAG_NAME="${GITHUB_REF#refs/tags/}"
+            
+            # Check if tag is created on the master branch
+            BRANCH=$(git rev-parse --abbrev-ref HEAD)
+            if [[ "$BRANCH" == "master" ]]; then
               PACKAGE_ID="nexus-git-${TAG_NAME}"
               PACKAGE_VERSION="${TAG_NAME}"
             else
-              echo "Tag is not pushed from the master branch. Skipping version assignment."
+              echo "Error: Tags must be created on the master branch."
+              exit 1
             fi
           else
-            if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
+            if [[ "$GITHUB_REF" == "refs/heads/development" ]]; then
               PACKAGE_ID="${FOLDER_NAME}.nexus-git"
-              PACKAGE_VERSION="1.0.0-${{ github.run_id }}"
-            elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
-              COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6)
+              PACKAGE_VERSION="1.0.0-${GITHUB_RUN_ID}"
+            elif [[ "$GITHUB_REF" == "refs/heads/release" ]]; then
+              COMMIT_ID=$(echo "${GITHUB_SHA}" | cut -c1-6)
               PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
               PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
-            elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
+            elif [[ "$GITHUB_REF" == "refs/heads/master" ]]; then
               PACKAGE_ID="nexus-git-1.0.1"
               PACKAGE_VERSION="1.0.1"
             fi
           fi
-          
+
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
           echo "::set-output name=package_id::${PACKAGE_ID}"
           echo "::set-output name=package_version::${PACKAGE_VERSION}"
-      
+
           echo "PACKAGE_ID: $PACKAGE_ID"
           echo "PACKAGE_VERSION: $PACKAGE_VERSION"
 
       - name: Pack project
         run: |
-            echo "Packaging with version: ${{ steps.set_name.outputs.package_version }}"
-            dotnet pack --configuration Release --output ./bin/Release \
-              /p:CustomPackageId=${{ steps.set_name.outputs.package_id }} \
-              /p:PackageVersion=${{ steps.set_name.outputs.package_version }}
+          echo "Packaging with version: ${{ env.PACKAGE_VERSION }}"
+          dotnet pack --configuration Release --output ./bin/Release \
+            /p:CustomPackageId=${{ env.PACKAGE_ID }} \
+            /p:PackageVersion=${{ env.PACKAGE_VERSION }}
+
 
       - name: Upload Package as Artifact
         uses: actions/upload-artifact@v3
