--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -31,27 +31,19 @@ jobs:
           PACKAGE_ID=""
           PACKAGE_VERSION=""
 
-          if [[ "$GITHUB_REF" == refs/tags/* ]]; then
+          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
             TAG_NAME="${GITHUB_REF#refs/tags/}"
-            
-            # Check if tag is created on the master branch
-            BRANCH=$(git rev-parse --abbrev-ref HEAD)
-            if [[ "$BRANCH" == "master" ]]; then
-              PACKAGE_ID="nexus-git-${TAG_NAME}"
-              PACKAGE_VERSION="${TAG_NAME}"
-            else
-              echo "Error: Tags must be created on the master branch."
-              exit 1
-            fi
+            PACKAGE_ID="nexus-git-${TAG_NAME}"
+            PACKAGE_VERSION="${TAG_NAME}"
           else
-            if [[ "$GITHUB_REF" == "refs/heads/development" ]]; then
+            if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
               PACKAGE_ID="${FOLDER_NAME}.nexus-git"
-              PACKAGE_VERSION="1.0.0-${GITHUB_RUN_ID}"
-            elif [[ "$GITHUB_REF" == "refs/heads/release" ]]; then
-              COMMIT_ID=$(echo "${GITHUB_SHA}" | cut -c1-6)
+              PACKAGE_VERSION="1.0.0-${{ github.run_id }}"
+            elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
+              COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6)
               PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
               PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
-            elif [[ "$GITHUB_REF" == "refs/heads/master" ]]; then
+            elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
               PACKAGE_ID="nexus-git-1.0.1"
               PACKAGE_VERSION="1.0.1"
             fi
