--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -30,11 +30,16 @@ jobs:
           FOLDER_NAME="nexus-git-development"
           PACKAGE_ID=""
           PACKAGE_VERSION=""
-
+      
           if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-            TAG_NAME="${GITHUB_REF#refs/tags/}"
-            PACKAGE_ID="nexus-git-${TAG_NAME}"
-            PACKAGE_VERSION="${TAG_NAME}"
+            # Check if the tag is pushed from the master branch
+            if [[ "${{ github.event.before }}" == "${{ github.sha }}" && "${{ github.ref }}" == refs/tags/* ]]; then
+              TAG_NAME="${GITHUB_REF#refs/tags/}"
+              PACKAGE_ID="nexus-git-${TAG_NAME}"
+              PACKAGE_VERSION="${TAG_NAME}"
+            else
+              echo "Tag is not pushed from the master branch. Skipping version assignment."
+            fi
           else
             if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
               PACKAGE_ID="${FOLDER_NAME}.nexus-git"
@@ -47,7 +52,15 @@ jobs:
               PACKAGE_ID="nexus-git-1.0.1"
               PACKAGE_VERSION="1.0.1"
             fi
-          fi 
+          fi
+          
+          echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
+          echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
+          echo "::set-output name=package_id::${PACKAGE_ID}"
+          echo "::set-output name=package_version::${PACKAGE_VERSION}"
+      
+          echo "PACKAGE_ID: $PACKAGE_ID"
+          echo "PACKAGE_VERSION: $PACKAGE_VERSION"
 
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
