--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -6,7 +6,6 @@ on:
       - master
     tags:
       - '*'
-     
 
 jobs: 
   build:
@@ -30,37 +29,38 @@ jobs:
           FOLDER_NAME="nexus-git-development"
           PACKAGE_ID=""
           PACKAGE_VERSION=""
-      
-          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-            # Check if the tag is pushed from the master branch
-            if [[ "${{ github.event.before }}" == "${{ github.sha }}" && "${{ github.ref }}" == refs/tags/* ]]; then
-              TAG_NAME="${GITHUB_REF#refs/tags/}"
+
+          if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
+            TAG_NAME="${GITHUB_REF#refs/tags/}"
+
+            # Fetch the latest commit on the master branch
+            git fetch origin master
+            MASTER_COMMIT=$(git rev-parse origin/master)
+
+            # Get the commit that the tag points to
+            TAG_COMMIT=$(git rev-parse "${GITHUB_REF}")
+
+            # Check if the tag commit is the same as the latest master commit
+            if [[ "$TAG_COMMIT" == "$MASTER_COMMIT" ]]; then
               PACKAGE_ID="nexus-git-${TAG_NAME}"
               PACKAGE_VERSION="${TAG_NAME}"
             else
-              echo "Tag is not pushed from the master branch. Skipping version assignment."
+              echo "Error: Tags must be created on the master branch."
+              exit 1
             fi
           else
-            if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
+            if [[ "${GITHUB_REF}" == "refs/heads/development" ]]; then
               PACKAGE_ID="${FOLDER_NAME}.nexus-git"
-              PACKAGE_VERSION="1.0.0-${{ github.run_id }}"
-            elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
-              COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6)
+              PACKAGE_VERSION="1.0.0-${GITHUB_RUN_ID}"
+            elif [[ "${GITHUB_REF}" == "refs/heads/release" ]]; then
+              COMMIT_ID=$(echo "${GITHUB_SHA}" | cut -c1-6)
               PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
               PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
-            elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
+            elif [[ "${GITHUB_REF}" == "refs/heads/master" ]]; then
               PACKAGE_ID="nexus-git-1.0.1"
               PACKAGE_VERSION="1.0.1"
             fi
-          fi
-          
-          echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
-          echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
-          echo "::set-output name=package_id::${PACKAGE_ID}"
-          echo "::set-output name=package_version::${PACKAGE_VERSION}"
-      
-          echo "PACKAGE_ID: $PACKAGE_ID"
-          echo "PACKAGE_VERSION: $PACKAGE_VERSION"
+          fi 
 
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
@@ -77,12 +77,12 @@ jobs:
             /p:CustomPackageId=${{ env.PACKAGE_ID }} \
             /p:PackageVersion=${{ env.PACKAGE_VERSION }}
 
-
       - name: Upload Package as Artifact
         uses: actions/upload-artifact@v3
         with:
           name: nuget-package
           path: ./bin/Release/${{ steps.set_name.outputs.package_id }}.${{ steps.set_name.outputs.package_version }}.nupkg
+
   sonar_scan:
     runs-on: windows-latest
     needs: build  
