--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -54,8 +54,7 @@ jobs:
               PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
               PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
             elif [[ "${GITHUB_REF}" == "refs/heads/master" ]]; then
-              PACKAGE_ID="nexus-git-1.0.1"
-              PACKAGE_VERSION="1.0.1"
+              echo "Advised to provide tag with the master branch, can't proceed further."
             fi
           fi 
 
