--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -3,11 +3,11 @@ name: Publish Package
 on:
   push:
     branches:
+      - master
       - development
       - release
     tags:
       - '*'
-     
 
 jobs: 
   build:
@@ -19,7 +19,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2 
+        uses: actions/checkout@v2  
 
       - name: Build Project 
         uses: ./.github/actions/build  
@@ -32,49 +32,55 @@ jobs:
           PACKAGE_ID=""
           PACKAGE_VERSION=""
 
-          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-            
-            if [[ "${{ github.event.before }}" == "${{ github.sha }}" && "${{ github.ref }}" == refs/tags/* ]]; then
-              TAG_NAME="${GITHUB_REF#refs/tags/}"
+          if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
+            TAG_NAME="${GITHUB_REF#refs/tags/}"
+
+            git fetch origin master
+            MASTER_COMMIT=$(git rev-parse origin/master)
+
+            TAG_COMMIT=$(git rev-parse "${GITHUB_REF}")
+
+            if [[ "$TAG_COMMIT" == "$MASTER_COMMIT" ]]; then
               PACKAGE_ID="nexus-git-${TAG_NAME}"
               PACKAGE_VERSION="${TAG_NAME}"
             else
-              echo "tag is not pushed from the master branch, skipping this process"
+              echo "Error: Tags must be created on the master branch."
+              exit 1
             fi
           else
-            if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
+            if [[ "${GITHUB_REF}" == "refs/heads/development" ]]; then
               PACKAGE_ID="${FOLDER_NAME}.nexus-git"
-              PACKAGE_VERSION="1.0.0-${{ github.run_id }}"
-            elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
-              COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6)
+              PACKAGE_VERSION="1.0.0-${GITHUB_RUN_ID}"
+            elif [[ "${GITHUB_REF}" == "refs/heads/release" ]]; then
+              COMMIT_ID=$(echo "${GITHUB_SHA}" | cut -c1-6)
               PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
               PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
-            elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
-              echo "Please provide a tag with the master branch, can't proceed further"
+            elif [[ "${GITHUB_REF}" == "refs/heads/master" ]]; then
+              echo "Advised to provide tag with the master branch, can't proceed further."
             fi
-          fi
-           
-        
+          fi 
+
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
           echo "::set-output name=package_id::${PACKAGE_ID}"
           echo "::set-output name=package_version::${PACKAGE_VERSION}"
-      
+
           echo "PACKAGE_ID: $PACKAGE_ID"
           echo "PACKAGE_VERSION: $PACKAGE_VERSION"
 
       - name: Pack project
         run: |
-            echo "Packaging with version: ${{ steps.set_name.outputs.package_version }}"
-            dotnet pack --configuration Release --output ./bin/Release \
-              /p:CustomPackageId=${{ steps.set_name.outputs.package_id }} \
-              /p:PackageVersion=${{ steps.set_name.outputs.package_version }}
+          echo "Packaging with version: ${{ env.PACKAGE_VERSION }}"
+          dotnet pack --configuration Release --output ./bin/Release \
+            /p:CustomPackageId=${{ env.PACKAGE_ID }} \
+            /p:PackageVersion=${{ env.PACKAGE_VERSION }}
 
       - name: Upload Package as Artifact
         uses: actions/upload-artifact@v3
         with:
           name: nuget-package
           path: ./bin/Release/${{ steps.set_name.outputs.package_id }}.${{ steps.set_name.outputs.package_version }}.nupkg
+
   sonar_scan:
     runs-on: windows-latest
     needs: build  
